NetBSD Problem Report #55458

From www@netbsd.org  Sun Jul  5 14:54:42 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E4BF71A9213
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  5 Jul 2020 14:54:41 +0000 (UTC)
Message-Id: <20200705145441.06C041A9218@mollari.NetBSD.org>
Date: Sun,  5 Jul 2020 14:54:40 +0000 (UTC)
From: jmcneill@invisible.ca
Reply-To: jmcneill@invisible.ca
To: gnats-bugs@NetBSD.org
Subject: entropy: WrAnRdNcING no nstropy in  eed
X-Send-Pr-Version: www-1.0

>Number:         55458
>Category:       kern
>Synopsis:       entropy: WrAnRdNcING no nstropy in  eed
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jul 05 14:55:00 +0000 2020
>Closed-Date:    Fri Feb 12 19:49:10 +0000 2021
>Last-Modified:  Fri Feb 12 19:50:00 +0000 2021
>Originator:     Jared McNeill
>Release:        9.99.69
>Organization:
NetBSD
>Environment:
NetBSD eva-01 9.99.69 NetBSD 9.99.69 (GENERIC64) #0: Sat Jul  4 19:25:24 UTC 2020  mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/evbarm/compile/GENERIC64 evbarm

>Description:
At boot on platforms without hardware rng, output from the kernel ("WARNING: consolidating less than full entropy") is mixed on the console with output from the rndctl command ("rndctl: no entropy in seed").
>How-To-Repeat:
Boot NetBSD -current on a system without hardware RNG: https://wiki.netbsd.org/ports/evbarm/qemu_arm/
>Fix:

>Release-Note:

>Audit-Trail:
From: "Taylor R Campbell" <riastradh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55458 CVS commit: src/sys/kern
Date: Mon, 11 Jan 2021 02:18:40 +0000

 Module Name:	src
 Committed By:	riastradh
 Date:		Mon Jan 11 02:18:40 UTC 2021

 Modified Files:
 	src/sys/kern: kern_entropy.c

 Log Message:
 entropy: Downgrade consolidation warning from printf to LOG_DEBUG.

 Candidate fix for PR kern/55458.  This message is rather technical,
 and so is unlikely to be acted on by anyone not debugging the kernel
 anyway.  Most likely, on any system where it is a real problem, there
 will be another (less technical) entropy warning anyway.


 To generate a diff of this commit:
 cvs rdiff -u -r1.25 -r1.26 src/sys/kern/kern_entropy.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Mon, 11 Jan 2021 03:51:47 +0000
State-Changed-Why:
candidate fix committed


State-Changed-From-To: feedback->closed
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Fri, 12 Feb 2021 19:49:10 +0000
State-Changed-Why:
Fixed in kern_entropy.c r1.30


From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55458 CVS commit: src/sys/kern
Date: Fri, 12 Feb 2021 19:48:27 +0000

 Module Name:	src
 Committed By:	jmcneill
 Date:		Fri Feb 12 19:48:26 UTC 2021

 Modified Files:
 	src/sys/kern: kern_entropy.c

 Log Message:
 entropy: Only print consolidation warning of AB_DEBUG.

 The previous fix for PR kern/55458 changed printf to log(LOG_DEBUG, ...) with
 the intent of hiding the message unless 'boot -x'. But this did not actually
 suppress the message to console as log(LOG_DEBUG, ...) will print to console
 if syslogd is not running yet.

 So instead, just check for AB_DEBUG flag directly in boothowto, and only
 printf the message if it is set.


 To generate a diff of this commit:
 cvs rdiff -u -r1.29 -r1.30 src/sys/kern/kern_entropy.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.